<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f7f7f7"
    android:orientation="horizontal"
    android:padding="@dimen/widget_margin">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#D8D8D8"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="2dp"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"


            android:contentDescription="@string/appwidget_text"
            android:text="@string/Ishaa"
            android:textColor="#0d0d0d"

            />

        <TextView
            android:id="@+id/txt_Ishaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/appwidget_text"

            android:padding="0dp"
            android:text="00:00"
            android:textColor="#0d0d0d"
            android:textSize="10sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#D8D8D8"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="2dp"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"


            android:contentDescription="@string/appwidget_text"
            android:text="@string/maghreb"
            android:textColor="#0d0d0d"

            />

        <TextView
            android:id="@+id/txt_maghreb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/appwidget_text"

            android:padding="0dp"
            android:text="00:00"
            android:textColor="#0d0d0d"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#D8D8D8"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="2dp"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"


            android:contentDescription="@string/appwidget_text"
            android:text="@string/asr"
            android:textColor="#0d0d0d"

            />

        <TextView
            android:id="@+id/txt_asr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"

            android:contentDescription="@string/appwidget_text"
            android:padding="0dp"
            android:text="00:00"
            android:textColor="#0d0d0d"

            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#D8D8D8"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="2dp"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"


            android:contentDescription="@string/appwidget_text"
            android:text="@string/dhuhur"
            android:textColor="#0d0d0d"

            />

        <TextView
            android:id="@+id/txt_dhuhur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"

            android:contentDescription="@string/appwidget_text"
            android:padding="0dp"
            android:text="00:00"
            android:textColor="#0d0d0d"

            android:textSize="10sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_weight="1"
        android:background="#D8D8D8"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"


            android:contentDescription="@string/appwidget_text"
            android:text="@string/sunrise"
            android:textColor="#0d0d0d"

            />

        <TextView
            android:id="@+id/txt_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/appwidget_text"

            android:padding="0dp"
            android:text="00:00"
            android:textColor="#0d0d0d"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#D8D8D8"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="2dp"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"


            android:contentDescription="@string/appwidget_text"
            android:text="@string/fajer"
            android:textColor="#0d0d0d"

            />


        <TextView
            android:id="@+id/txt_fajer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/appwidget_text"
            android:padding="0dp"
            android:text="00:00"
            android:textColor="#0d0d0d"

            android:textSize="10sp" />

    </LinearLayout>




</LinearLayout>
